--- a/app/src/main/res/layout/activity_income.xml
+++ b/app/src/main/res/layout/activity_income.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/dayTextView"
+            android:id="@+id/dayIncomeTextView"
             android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
             android:text="@string/day" />
 
         <TextView
-            android:id="@+id/dateTextView"
+            android:id="@+id/dateIncomeTextView"
             android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/typeTextView"
+            android:id="@+id/typeIncomeTextView"
             android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
@@ -52,7 +52,7 @@
 
         <Spinner
             android:layout_marginTop="10dp"
-            android:id="@+id/moneytypeSpinner"
+            android:id="@+id/typeIncomeSpinner"
             android:entries="@array/list_money_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -70,7 +70,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/dollarSignTextView"
+            android:id="@+id/dollarSignIncomeTextView"
             android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
             android:text="@string/dollar_sign" />
 
         <EditText
-            android:id="@+id/amountEditView"
+            android:id="@+id/amountIncomeEditView"
             android:textColorHint="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
@@ -96,11 +96,10 @@
 
     <Button
         android:layout_weight="6"
-        android:id="@+id/submitButton"
+        android:id="@+id/submitIncomeButton"
         android:layout_gravity="center"
         android:text="@string/submit_button"
         android:textColor="#FFF"
-
         android:background="@drawable/mybutton"
         android:layout_width="wrap_content"
         android:layout_height="0dp" />
@@ -111,13 +110,13 @@
         android:layout_height="0dp" />
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
+        android:id="@+id/incomeBottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@drawable/nav_item_color_state"
         app:itemTextColor="@drawable/nav_item_color_state"
-        app:menu="@menu/main_bottom_navigation_bar"
+        app:menu="@menu/bottom_navigation_bar"
         />
 
 </LinearLayout>
