--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/typeSummaryTextView"
             android:textColor="@color/fontColor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:text="@string/type"
@@ -27,7 +28,6 @@
         <Spinner
             android:id="@+id/summarySpinner"
             android:layout_marginTop="10dp"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
@@ -42,11 +42,10 @@
 
     <Button
         android:layout_weight="6"
-        android:id="@+id/submitButton"
+        android:id="@+id/submitSummaryButton"
         android:layout_gravity="center"
         android:text="@string/submit_button"
         android:textColor="#FFF"
-
         android:background="@drawable/mybutton"
         android:layout_width="wrap_content"
         android:layout_height="0dp" />
@@ -58,13 +57,13 @@
         android:layout_weight="47" />
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
+        android:id="@+id/summaryBottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@drawable/nav_item_color_state"
         app:itemTextColor="@drawable/nav_item_color_state"
-        app:menu="@menu/main_bottom_navigation_bar"
+        app:menu="@menu/bottom_navigation_bar"
         />
 
 </LinearLayout>
