Work on database

--- a/app/src/main/res/layout/activity_income.xml
+++ b/app/src/main/res/layout/activity_income.xml
@@ -17,20 +17,20 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/dayIncomeTextView"
-            android:textColor="@color/fontColor"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:id="@+id/selectDateIncomeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/day" />
+            android:text="@string/select_date"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="@color/fontColor" />
 
         <TextView
             android:id="@+id/dateIncomeTextView"
-            android:textColor="@color/fontColor"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/date" />
+            android:text="@string/date"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="@color/fontColor" />
 
     </LinearLayout>
 
@@ -43,22 +43,21 @@
 
         <TextView
             android:id="@+id/typeIncomeTextView"
-            android:textColor="@color/fontColor"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/type" />
+            android:text="@string/type"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="@color/fontColor" />
 
         <Spinner
-            android:layout_marginTop="10dp"
             android:id="@+id/typeIncomeSpinner"
-            android:entries="@array/list_money_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:entries="@array/list_money_type"
             android:gravity="center"
-            android:scrollbarSize="30dp">
-        </Spinner>
+            android:scrollbarSize="30dp"></Spinner>
 
     </LinearLayout>
 
@@ -105,9 +104,10 @@
         android:layout_height="0dp" />
 
     <TextView
-        android:layout_weight="7"
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        android:layout_weight="7" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/incomeBottomNavigation"
