--- a/app/src/main/res/layout/activity_yearly_summary.xml
+++ b/app/src/main/res/layout/activity_yearly_summary.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:layout_weight="5"
-        android:id="@+id/textView2"
+        android:id="@+id/yearYearlySummary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -30,12 +30,6 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
-
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/amount" />
 
     </LinearLayout>
@@ -53,11 +47,6 @@
             android:text="@string/income_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
 
         <TextView
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
@@ -80,11 +69,6 @@
             android:text="@string/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
 
         <TextView
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
