--- a/app/src/main/res/layout/activity_daily_summary.xml
+++ b/app/src/main/res/layout/activity_daily_summary.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
     
     <TextView
+        android:id="@+id/dailySummaryDate"
         android:layout_weight="5"
         android:gravity="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
@@ -15,7 +16,7 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        android:paddingLeft="5dp"
+        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="5"
@@ -23,18 +24,14 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/dailySummaryExpenseTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/expense_total"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
-
-        <TextView
+            android:id="@+id/dailySummaryExpenseTotalAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/amount"
@@ -43,34 +40,31 @@
     </LinearLayout>
 
     <LinearLayout
-        android:paddingLeft="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="5"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:padding="5dp">
 
         <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:id="@+id/dailySummaryIncomeTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/income_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
         <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:id="@+id/dailySummaryIncomeTotalAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/amount" />
+            android:text="@string/amount"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:paddingLeft="5dp"
+        android:padding="5dp"
         android:layout_weight="5"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -78,17 +72,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/dailySummaryNetTotal"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
 
         <TextView
+            android:id="@+id/dailySummaryNetTotalAmount"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -129,9 +120,8 @@
     </LinearLayout>
 
     <ListView
-        android:layout_weight="75"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="0dp"
+        android:layout_weight="75"></ListView>
 
 </LinearLayout>
