--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -17,12 +17,12 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/dayExpenseTextView"
+            android:id="@+id/selectDateExpenseTextView"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/fontColor"
-            android:text="@string/day" />
+            android:text="@string/select_date" />
 
         <TextView
             android:id="@+id/dateExpenseTextView"
