--- a/app/src/main/res/layout/activity_monthly_summary.xml
+++ b/app/src/main/res/layout/activity_monthly_summary.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/monthYearMonthlySummary"
         android:layout_weight="5"
         android:gravity="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:text="@string/month"
+        android:text="@string/monthYear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -24,12 +25,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/expense_total" />
-
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
 
         <TextView
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
@@ -52,11 +47,6 @@
             android:text="@string/income_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
 
         <TextView
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
@@ -79,11 +69,6 @@
             android:text="@string/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dollar_sign" />
 
         <TextView
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
