Working on ListViews

--- a/app/src/main/res/layout/activity_daily_summary.xml
+++ b/app/src/main/res/layout/activity_daily_summary.xml
@@ -120,6 +120,7 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/actionHistoryListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="75"></ListView>
