--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mingkie.simplepocketaccount.ExpenseActivity">
+    tools:context="com.example.mingkie.simplepocketaccount.MainActivities.ExpenseActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,37 +64,59 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:orientation="vertical"
         android:layout_weight="20"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
 
         <TextView
-            android:id="@+id/dollarSignExpenseTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:layout_weight="30"
+            android:id="@+id/expenseWarning"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:gravity="center"
-            android:text="@string/dollar_sign"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColor="@color/fontColor" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="#000000"
+            android:text="@string/warning_amount" />
 
-        <EditText
-            android:id="@+id/amountExpenseEditView"
-            android:inputType="number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_weight="70"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:gravity="center"
-            android:hint="@string/amount"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColorHint="@color/fontColor" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/dollarSignExpenseTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/dollar_sign"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textColor="@color/fontColor" />
+
+            <EditText
+                android:id="@+id/amountExpenseEditView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="@string/amount"
+                android:inputType="numberDecimal"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textColor="@color/fontColor"
+                android:textColorHint="@color/fontColor" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
+
     <TextView
-        android:layout_weight="7"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:gravity="center" />
 
     <Button
         android:id="@+id/submitExpenseButton"
