--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mingkie.simplepocketaccount.SummaryActivity">
+    tools:context="com.example.mingkie.simplepocketaccount.MainActivities.SummaryActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
