--- a/app/src/main/res/layout/activity_monthly_summary.xml
+++ b/app/src/main/res/layout/activity_monthly_summary.xml
@@ -4,29 +4,32 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:textColor="#000000"
         android:id="@+id/monthYearMonthlySummary"
-        android:layout_weight="5"
+        android:layout_weight="8"
         android:gravity="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:text="@string/monthYear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp" />
 
     <LinearLayout
-        android:paddingLeft="5dp"
-        android:gravity="center_vertical"
-        android:layout_weight="5"
+        android:gravity="center"
+        android:layout_weight="8"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal">
 
         <TextView
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/expense_total" />
 
         <TextView
+            android:textColor="#000000"
+            android:id="@+id/expenseAmountMonthlySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,20 +38,23 @@
     </LinearLayout>
 
     <LinearLayout
-        android:paddingLeft="5dp"
-        android:gravity="center_vertical"
-        android:layout_weight="5"
+
+        android:gravity="center"
+        android:layout_weight="8"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <TextView
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/income_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:textColor="#000000"
+            android:id="@+id/incomeAmountMonthlySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,62 +63,70 @@
     </LinearLayout>
 
     <LinearLayout
-        android:paddingLeft="5dp"
-        android:gravity="center_vertical"
-        android:layout_weight="5"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="#000000" />
 
         <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:id="@+id/netAmountMonthlySummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/amount" />
+            android:text="@string/amount"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="#000000" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="5"
+        android:layout_weight="8"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <TextView
+            android:textColor="#000000"
+            android:id="@+id/weekMonthlySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="center"
-            android:layout_weight="50"
+            android:layout_weight="2"
             android:text="@string/week"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
 
         <TextView
+            android:textColor="#000000"
+            android:id="@+id/incomeMonthlySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="center"
-            android:layout_weight="50"
-            android:text="@string/view_income"
+            android:layout_weight="4"
+            android:text="@string/dollar_sign_income"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
 
         <TextView
+            android:textColor="#000000"
+            android:id="@+id/expenseMonthlySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="center"
-            android:layout_weight="50"
-            android:text="@string/view_expense"
+            android:layout_weight="4"
+            android:text="@string/dollar_sign_expense"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
     </LinearLayout>
 
     <ListView
-
+        android:id="@+id/listViewMonthlySummary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="75" />
+        android:layout_height="0dp"
+        android:layout_weight="60" />
 
 </LinearLayout>
