--- a/app/src/main/res/layout/activity_weekly_summary.xml
+++ b/app/src/main/res/layout/activity_weekly_summary.xml
@@ -4,50 +4,57 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_weight="5"
-        android:gravity="center"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:text="@string/week"
+        android:textColor="#000000"
+        android:id="@+id/weekWeeklySummary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:gravity="center"
+        android:text="@string/week"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <LinearLayout
-        android:paddingLeft="5dp"
-        android:gravity="center_vertical"
-        android:layout_weight="5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/expense_total" />
+            android:text="@string/expense_total"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
         <TextView
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="#000000"
+            android:id="@+id/expenseAmountWeeklySummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/amount" />
+            android:text="@string/amount"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:paddingLeft="5dp"
-        android:gravity="center_vertical"
-        android:layout_weight="5"
+
+        android:gravity="center"
+        android:layout_weight="8"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <TextView
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/income_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:textColor="#000000"
+            android:id="@+id/incomeAmountWeeklySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,20 +63,23 @@
     </LinearLayout>
 
     <LinearLayout
-        android:paddingLeft="5dp"
-        android:gravity="center_vertical"
-        android:layout_weight="5"
+
+        android:gravity="center"
+        android:layout_weight="8"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <TextView
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:textColor="#000000"
+            android:id="@+id/netAmountWeeklySummary"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,40 +88,45 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="5"
+
+        android:layout_weight="8"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <TextView
+            android:textColor="#000000"
             android:id="@+id/textView3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="50"
+            android:layout_weight="30"
             android:gravity="center"
             android:text="@string/day"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
         <TextView
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="center"
-            android:layout_weight="50"
-            android:text="@string/view_income"
+            android:layout_weight="35"
+            android:text="@string/dollar_sign_income"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
 
         <TextView
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="center"
-            android:layout_weight="50"
-            android:text="@string/view_expense"
+            android:layout_weight="35"
+            android:text="@string/dollar_sign_expense"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
     </LinearLayout>
 
     <ListView
-        android:layout_weight="75"
+        android:id="@+id/listViewWeeklySummary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="60" />
 
 </LinearLayout>
