--- a/app/src/main/res/layout/listview_daily_summary.xml
+++ b/app/src/main/res/layout/listview_daily_summary.xml
@@ -6,30 +6,32 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:textColor="#000000"
         android:id="@+id/listViewExpenseIncome"
-        android:padding="5dp"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:text="@string/expense_or_income"
         android:gravity="center"
-        android:layout_weight="50"
+        android:layout_weight="4"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
     <TextView
+        android:textColor="#000000"
         android:id="@+id/listViewType"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:gravity="center"
-        android:layout_weight="50"
+        android:layout_weight="3"
         android:text="@string/type"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
+
     <TextView
+        android:textColor="#000000"
         android:id="@+id/listViewAmount"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:gravity="center"
-        android:layout_weight="50"
+        android:layout_weight="3"
         android:text="@string/amount_dollar_sign"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
-
 </LinearLayout>
