--- a/app/src/main/res/layout/listview_yearly_summary.xml
+++ b/app/src/main/res/layout/listview_yearly_summary.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="5dp"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:textColor="#000000"
+        android:id="@+id/monthYearlyListView"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:gravity="center"
+        android:layout_weight="30"
+        android:text="@string/month"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:textColor="#000000"
+        android:id="@+id/incomeYearlyListView"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:gravity="center"
+        android:layout_weight="35"
+        android:text="@string/dollar_sign_income"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:textColor="#000000"
+        android:id="@+id/expenseYearlySummary"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:gravity="center"
+        android:layout_weight="35"
+        android:text="@string/dollar_sign_expense"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
